%YAML 1.1
%TAG !u! tag:unity3d.com,2011:
--- !u!91 &9100000
AnimatorController:
  m_ObjectHideFlags: 0
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: CharCtrlrWTriggerSprinting
  serializedVersion: 2
  m_AnimatorParameters:
  - m_Name: speed
    m_Type: 1
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: direction
    m_Type: 1
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: canJump
    m_Type: 4
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: canSprint
    m_Type: 4
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: canClimb
    m_Type: 4
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: rifleActivated
    m_Type: 4
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: shoot
    m_Type: 4
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  m_AnimatorLayers:
  - serializedVersion: 3
    m_Name: Base Layer
    m_StateMachine: {fileID: 110700000}
    m_Mask: {fileID: 0}
    m_BlendingMode: 0
    m_SyncedLayerIndex: -1
    m_StateMachineMotionSetIndex: 0
    m_DefaultWeight: 0
    m_IKPass: 0
    m_SyncedLayerAffectsTiming: 0
    m_Controller: {fileID: 9100000}
  - serializedVersion: 3
    m_Name: Rifle
    m_StateMachine: {fileID: 110700002}
    m_Mask: {fileID: 101100000, guid: dd6abae773618314c85c8a7e7530e092, type: 2}
    m_BlendingMode: 0
    m_SyncedLayerIndex: -1
    m_StateMachineMotionSetIndex: 0
    m_DefaultWeight: 0
    m_IKPass: 0
    m_SyncedLayerAffectsTiming: 0
    m_Controller: {fileID: 9100000}
--- !u!206 &20600000
BlendTree:
  m_ObjectHideFlags: 1
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Blend Tree
  m_Childs:
  - m_Motion: {fileID: 7400006, guid: 66e521740e4044e1b8a7fff5876160b8, type: 3}
    m_Threshold: -1
    m_Position: {x: 0, y: 0}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_IsAnim: 1
    m_Mirror: 0
  - m_Motion: {fileID: 7400004, guid: 665a030bd0eda4073b9a696237b5af76, type: 3}
    m_Threshold: 0
    m_Position: {x: 0, y: 0}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_IsAnim: 1
    m_Mirror: 0
  - m_Motion: {fileID: 7400006, guid: 66e521740e4044e1b8a7fff5876160b8, type: 3}
    m_Threshold: 1
    m_Position: {x: 0, y: 0}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_IsAnim: 1
    m_Mirror: 0
  m_BlendParameter: direction
  m_BlendParameterY: Blend
  m_MinThreshold: -1
  m_MaxThreshold: 1
  m_UseAutomaticThresholds: 1
  m_BlendType: 0
--- !u!206 &20600002
BlendTree:
  m_ObjectHideFlags: 1
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Blend Tree
  m_Childs:
  - m_Motion: {fileID: 20600004}
    m_Threshold: 0
    m_Position: {x: 0, y: 0}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_IsAnim: 1
    m_Mirror: 0
  - m_Motion: {fileID: 20600006}
    m_Threshold: .5
    m_Position: {x: 0, y: 0}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_IsAnim: 1
    m_Mirror: 0
  m_BlendParameter: speed
  m_BlendParameterY: Blend
  m_MinThreshold: 0
  m_MaxThreshold: .5
  m_UseAutomaticThresholds: 1
  m_BlendType: 0
--- !u!206 &20600004
BlendTree:
  m_ObjectHideFlags: 1
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Walk
  m_Childs:
  - m_Motion: {fileID: 7400006, guid: 568cdc2a12387419f9e264beb3ef0265, type: 3}
    m_Threshold: -1
    m_Position: {x: 0, y: 0}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_IsAnim: 1
    m_Mirror: 0
  - m_Motion: {fileID: 7400004, guid: 04f4c7cb5e9914c1aaff9215d330728a, type: 3}
    m_Threshold: 0
    m_Position: {x: 0, y: 0}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_IsAnim: 1
    m_Mirror: 0
  - m_Motion: {fileID: 7400004, guid: 568cdc2a12387419f9e264beb3ef0265, type: 3}
    m_Threshold: 1
    m_Position: {x: 0, y: 0}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_IsAnim: 1
    m_Mirror: 0
  m_BlendParameter: direction
  m_BlendParameterY: Blend
  m_MinThreshold: -1
  m_MaxThreshold: 1
  m_UseAutomaticThresholds: 1
  m_BlendType: 0
--- !u!206 &20600006
BlendTree:
  m_ObjectHideFlags: 1
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Run
  m_Childs:
  - m_Motion: {fileID: 7400026, guid: 7333bec06e04c4b6e9d78bd6e890dfb1, type: 3}
    m_Threshold: -1
    m_Position: {x: 0, y: 0}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_IsAnim: 1
    m_Mirror: 0
  - m_Motion: {fileID: 7400014, guid: 7333bec06e04c4b6e9d78bd6e890dfb1, type: 3}
    m_Threshold: 0
    m_Position: {x: 0, y: 0}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_IsAnim: 1
    m_Mirror: 0
  - m_Motion: {fileID: 7400034, guid: 7333bec06e04c4b6e9d78bd6e890dfb1, type: 3}
    m_Threshold: 1
    m_Position: {x: 0, y: 0}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_IsAnim: 1
    m_Mirror: 0
  m_BlendParameter: direction
  m_BlendParameterY: Blend
  m_MinThreshold: -1
  m_MaxThreshold: 1
  m_UseAutomaticThresholds: 1
  m_BlendType: 0
--- !u!206 &20600008
BlendTree:
  m_ObjectHideFlags: 1
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Blend Tree
  m_Childs: []
  m_BlendParameter: speed
  m_BlendParameterY: speed
  m_MinThreshold: 0
  m_MaxThreshold: 1
  m_UseAutomaticThresholds: 1
  m_BlendType: 0
--- !u!206 &20625772
BlendTree:
  m_ObjectHideFlags: 1
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Blend Tree
  m_Childs:
  - m_Motion: {fileID: 20674464}
    m_Threshold: 0
    m_Position: {x: 0, y: 0}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_IsAnim: 1
    m_Mirror: 0
  m_BlendParameter: speed
  m_BlendParameterY: Blend
  m_MinThreshold: 0
  m_MaxThreshold: .5
  m_UseAutomaticThresholds: 1
  m_BlendType: 0
--- !u!206 &20674464
BlendTree:
  m_ObjectHideFlags: 1
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Walk
  m_Childs:
  - m_Motion: {fileID: 7400006, guid: 568cdc2a12387419f9e264beb3ef0265, type: 3}
    m_Threshold: -1
    m_Position: {x: 0, y: 0}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_IsAnim: 1
    m_Mirror: 0
  - m_Motion: {fileID: 7400004, guid: 04f4c7cb5e9914c1aaff9215d330728a, type: 3}
    m_Threshold: 0
    m_Position: {x: 0, y: 0}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_IsAnim: 1
    m_Mirror: 0
  - m_Motion: {fileID: 7400004, guid: 568cdc2a12387419f9e264beb3ef0265, type: 3}
    m_Threshold: 1
    m_Position: {x: 0, y: 0}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_IsAnim: 1
    m_Mirror: 0
  m_BlendParameter: direction
  m_BlendParameterY: Blend
  m_MinThreshold: -1
  m_MaxThreshold: 1
  m_UseAutomaticThresholds: 1
  m_BlendType: 0
--- !u!1101 &110100000
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110200000}
  m_DstState: {fileID: 110282669}
  m_TransitionDuration: .00232558139
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 4
    m_ConditionEvent: speed
    m_EventTreshold: -.100000001
    m_ExitTime: .997674406
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110107306
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110225772}
  m_DstState: {fileID: 110200000}
  m_TransitionDuration: .25
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 4
    m_ConditionEvent: speed
    m_EventTreshold: .100000001
    m_ExitTime: .75
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110119709
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110207960}
  m_DstState: {fileID: 110225772}
  m_TransitionDuration: .111940295
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 5
    m_ConditionEvent: canJump
    m_EventTreshold: 0
    m_ExitTime: .810000002
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110123753
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110277998}
  m_DstState: {fileID: 110291233}
  m_TransitionDuration: .100000001
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: weaponActive
    m_EventTreshold: 0
    m_ExitTime: .899999976
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110127507
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110263106}
  m_DstState: {fileID: 110225772}
  m_TransitionDuration: .323741019
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 2
    m_ConditionEvent: canSprint
    m_EventTreshold: 0
    m_ExitTime: .676258981
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110128182
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110292093}
  m_DstState: {fileID: 110214356}
  m_TransitionDuration: 1
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 2
    m_ConditionEvent: rifleActivated
    m_EventTreshold: 0
    m_ExitTime: 0
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110130968
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110211446}
  m_DstState: {fileID: 110208457}
  m_TransitionDuration: 0
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: canShoot
    m_EventTreshold: 0
    m_ExitTime: 0
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110133692
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110208457}
  m_DstState: {fileID: 110211446}
  m_TransitionDuration: 1
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 2
    m_ConditionEvent: canShoot
    m_EventTreshold: 0
    m_ExitTime: 0
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110137074
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110225772}
  m_DstState: {fileID: 110263106}
  m_TransitionDuration: .25
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: canSprint
    m_EventTreshold: 0
    m_ExitTime: .75
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110143327
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110200000}
  m_DstState: {fileID: 110225772}
  m_TransitionDuration: .00232558139
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 3
    m_ConditionEvent: speed
    m_EventTreshold: .100000001
    m_ExitTime: .997674406
  - m_ConditionMode: 2
    m_ConditionEvent: canSprint
    m_EventTreshold: .100000001
    m_ExitTime: .997674406
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110146284
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110263106}
  m_DstState: {fileID: 110207960}
  m_TransitionDuration: .323741019
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: canJump
    m_EventTreshold: 0
    m_ExitTime: .676258981
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110146387
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 0}
  m_DstState: {fileID: 0}
  m_TransitionDuration: 1
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 5
    m_ConditionEvent: 
    m_EventTreshold: 0
    m_ExitTime: 0
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110148941
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110291233}
  m_DstState: {fileID: 110211446}
  m_TransitionDuration: .666666687
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 5
    m_ConditionEvent: 
    m_EventTreshold: 0
    m_ExitTime: .333333313
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110150173
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110207960}
  m_DstState: {fileID: 110263106}
  m_TransitionDuration: .198709667
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 5
    m_ConditionEvent: canJump
    m_EventTreshold: 0
    m_ExitTime: .81099999
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110156379
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110204685}
  m_DstState: {fileID: 110214356}
  m_TransitionDuration: 1
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 2
    m_ConditionEvent: rifleActivated
    m_EventTreshold: 0
    m_ExitTime: 0
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110157316
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 0}
  m_DstState: {fileID: 110292093}
  m_TransitionDuration: .100000001
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: shoot
    m_EventTreshold: 0
    m_ExitTime: .899999976
  - m_ConditionMode: 1
    m_ConditionEvent: rifleActivated
    m_EventTreshold: 0
    m_ExitTime: .899999976
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110161289
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110225772}
  m_DstState: {fileID: 110207960}
  m_TransitionDuration: .25
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: canJump
    m_EventTreshold: 0
    m_ExitTime: .75
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110164795
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110200000}
  m_DstState: {fileID: 110278367}
  m_TransitionDuration: .0187500007
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: canClimb
    m_EventTreshold: 0
    m_ExitTime: .981249988
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110171439
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110282669}
  m_DstState: {fileID: 110200000}
  m_TransitionDuration: .249998391
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 3
    m_ConditionEvent: speed
    m_EventTreshold: -.100000001
    m_ExitTime: .75
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110175241
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110214356}
  m_DstState: {fileID: 110204685}
  m_TransitionDuration: .100000001
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: rifleActivated
    m_EventTreshold: 0
    m_ExitTime: .899999976
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110177141
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110200000}
  m_DstState: {fileID: 110263106}
  m_TransitionDuration: .00232558139
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 3
    m_ConditionEvent: speed
    m_EventTreshold: .100000001
    m_ExitTime: .997674406
  - m_ConditionMode: 1
    m_ConditionEvent: canSprint
    m_EventTreshold: .100000001
    m_ExitTime: .997674406
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110179538
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110278367}
  m_DstState: {fileID: 110200000}
  m_TransitionDuration: .0572519079
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 5
    m_ConditionEvent: rifleActivated
    m_EventTreshold: 0
    m_ExitTime: .94274807
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110197629
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110263106}
  m_DstState: {fileID: 110200000}
  m_TransitionDuration: .323741019
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 4
    m_ConditionEvent: speed
    m_EventTreshold: .100000001
    m_ExitTime: .676258981
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1102 &110200000
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Idle
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400014, guid: ce448a8080b4e934b8473badd27be402, type: 3}
  m_ParentStateMachine: {fileID: 110700000}
  m_Position: {x: 336, y: 60, z: 0}
  m_IKOnFeet: 1
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110204685
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: WeaponActivate
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400000, guid: dd9a198388a5f914da0c4356c69a28e5, type: 3}
  m_ParentStateMachine: {fileID: 110700002}
  m_Position: {x: 240, y: -24, z: 0}
  m_IKOnFeet: 1
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110207960
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Jump
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400012, guid: cbb67ab5509bfe24dba7db2d65a9632f, type: 3}
  m_ParentStateMachine: {fileID: 110700000}
  m_Position: {x: 348, y: -144, z: 0}
  m_IKOnFeet: 1
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110208457
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Fire
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400002, guid: 3ddec540a1575f542b89a51e9531017d, type: 3}
  m_ParentStateMachine: {fileID: 0}
  m_Position: {x: 312, y: -120, z: 0}
  m_IKOnFeet: 1
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110211446
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: DrawnWeapon
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400004, guid: 3ddec540a1575f542b89a51e9531017d, type: 3}
  m_ParentStateMachine: {fileID: 0}
  m_Position: {x: 312, y: -48, z: 0}
  m_IKOnFeet: 1
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110214356
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: New State
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 0}
  m_ParentStateMachine: {fileID: 110700002}
  m_Position: {x: 240, y: 60, z: 0}
  m_IKOnFeet: 1
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110225772
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Walk
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 20625772}
  m_ParentStateMachine: {fileID: 110700000}
  m_Position: {x: 468, y: -48, z: 0}
  m_IKOnFeet: 1
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110263106
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Sprint
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 20600002}
  m_ParentStateMachine: {fileID: 110700000}
  m_Position: {x: 228, y: -48, z: 0}
  m_IKOnFeet: 1
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110277998
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Nothing
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 0}
  m_ParentStateMachine: {fileID: 0}
  m_Position: {x: 444, y: 72, z: 0}
  m_IKOnFeet: 1
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110278367
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: ClimbHigh
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400002, guid: 27994c7cffeba7d429dcceda8ee80b7b, type: 3}
  m_ParentStateMachine: {fileID: 110700000}
  m_Position: {x: 600, y: 60, z: 0}
  m_IKOnFeet: 1
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110282669
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Backwards
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 20600000}
  m_ParentStateMachine: {fileID: 110700000}
  m_Position: {x: 336, y: 120, z: 0}
  m_IKOnFeet: 1
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110291233
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: AutoWActivate
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400000, guid: 3ddec540a1575f542b89a51e9531017d, type: 3}
  m_ParentStateMachine: {fileID: 0}
  m_Position: {x: 312, y: 12, z: 0}
  m_IKOnFeet: 1
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110292093
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Shoot
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400002, guid: dd9a198388a5f914da0c4356c69a28e5, type: 3}
  m_ParentStateMachine: {fileID: 110700002}
  m_Position: {x: -36, y: -12, z: 0}
  m_IKOnFeet: 1
  m_Mirror: 0
  m_Tag: 
--- !u!1107 &110700000
StateMachine:
  serializedVersion: 2
  m_ObjectHideFlags: 1
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Base Layer
  m_DefaultState: {fileID: 110200000}
  m_States:
  - {fileID: 110200000}
  - {fileID: 110282669}
  - {fileID: 110263106}
  - {fileID: 110207960}
  - {fileID: 110225772}
  - {fileID: 110278367}
  m_ChildStateMachine: []
  m_ChildStateMachinePosition: []
  m_OrderedTransitions:
    data:
      first: {fileID: 0}
      second: []
    data:
      first: {fileID: 110200000}
      second:
      - {fileID: 110100000}
      - {fileID: 110143327}
      - {fileID: 110177141}
      - {fileID: 110164795}
    data:
      first: {fileID: 110282669}
      second:
      - {fileID: 110171439}
    data:
      first: {fileID: 110263106}
      second:
      - {fileID: 110197629}
      - {fileID: 110146284}
      - {fileID: 110127507}
    data:
      first: {fileID: 110207960}
      second:
      - {fileID: 110150173}
      - {fileID: 110119709}
    data:
      first: {fileID: 110225772}
      second:
      - {fileID: 110161289}
      - {fileID: 110107306}
      - {fileID: 110137074}
    data:
      first: {fileID: 110278367}
      second:
      - {fileID: 110179538}
  m_MotionSetCount: 1
  m_AnyStatePosition: {x: -12, y: 24, z: 0}
  m_ParentStateMachinePosition: {x: 800, y: 20, z: 0}
--- !u!1107 &110700002
StateMachine:
  serializedVersion: 2
  m_ObjectHideFlags: 1
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Rifle
  m_DefaultState: {fileID: 110214356}
  m_States:
  - {fileID: 110214356}
  - {fileID: 110204685}
  - {fileID: 110292093}
  m_ChildStateMachine: []
  m_ChildStateMachinePosition: []
  m_OrderedTransitions:
    data:
      first: {fileID: 0}
      second:
      - {fileID: 110157316}
    data:
      first: {fileID: 110214356}
      second:
      - {fileID: 110175241}
    data:
      first: {fileID: 110204685}
      second:
      - {fileID: 110156379}
    data:
      first: {fileID: 110292093}
      second:
      - {fileID: 110128182}
  m_MotionSetCount: 1
  m_AnyStatePosition: {x: -12, y: 60, z: 0}
  m_ParentStateMachinePosition: {x: 800, y: 20, z: 0}
